// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Preset Update works as planned:  after Going to preset 1`] = `
Object {
  "createState": Object {},
  "currentlyEditing": "",
  "fetching": Object {},
  "getFromServer": [Function],
  "getState": Object {
    "presetAssistant": Object {
      "c1bbbbbbbbbbbbbbbbbbbbbb": "s09",
    },
    "users": Object {
      "u1": Object {
        "_id": "u1",
        "email": "u1",
      },
    },
  },
  "lastFetch": Object {},
  "removeState": Object {},
  "updateState": Object {
    "assistantFormc1bbbbbbbbbbbbbbbbbbbbbb": "s09",
  },
}
`;

exports[`Preset Update works as planned:  after Saving preset  1`] = `
Object {
  "createState": Object {},
  "currentlyEditing": "",
  "fetching": Object {},
  "getFromServer": [Function],
  "getState": Object {
    "presetAssistant": Object {
      "c1bbbbbbbbbbbbbbbbbbbbbb": "s05",
    },
    "users": Object {
      "u1": Object {
        "_id": "u1",
        "email": "u1",
      },
    },
  },
  "lastFetch": Object {},
  "removeState": Object {},
  "updateState": Object {
    "assistantFormc1bbbbbbbbbbbbbbbbbbbbbb": "s05",
  },
}
`;

exports[`Preset Update works as planned:  after Stop zooming  1`] = `
Object {
  "createState": Object {},
  "currentlyEditing": "",
  "fetching": Object {},
  "getFromServer": [Function],
  "getState": Object {
    "presetAssistant": Object {
      "c1bbbbbbbbbbbbbbbbbbbbbb": "zS50",
    },
    "users": Object {
      "u1": Object {
        "_id": "u1",
        "email": "u1",
      },
    },
  },
  "lastFetch": Object {},
  "removeState": Object {},
  "updateState": Object {
    "assistantFormc1bbbbbbbbbbbbbbbbbbbbbb": "zS50",
  },
}
`;

exports[`Preset Update works as planned:  after zooming Out  1`] = `
Object {
  "createState": Object {},
  "currentlyEditing": "",
  "fetching": Object {},
  "getFromServer": [Function],
  "getState": Object {
    "presetAssistant": Object {
      "c1bbbbbbbbbbbbbbbbbbbbbb": "zS73",
    },
    "users": Object {
      "u1": Object {
        "_id": "u1",
        "email": "u1",
      },
    },
  },
  "lastFetch": Object {},
  "removeState": Object {},
  "updateState": Object {
    "assistantFormc1bbbbbbbbbbbbbbbbbbbbbb": "zS73",
  },
}
`;

exports[`Preset Update works as planned:  after zooming in  1`] = `
Object {
  "createState": Object {},
  "currentlyEditing": "",
  "fetching": Object {},
  "getFromServer": [Function],
  "getState": Object {
    "presetAssistant": Object {
      "c1bbbbbbbbbbbbbbbbbbbbbb": "zS03",
    },
    "users": Object {
      "u1": Object {
        "_id": "u1",
        "email": "u1",
      },
    },
  },
  "lastFetch": Object {},
  "removeState": Object {},
  "updateState": Object {
    "assistantFormc1bbbbbbbbbbbbbbbbbbbbbb": "zS03",
  },
}
`;

exports[`Preset Update works as planned: Before anything 1`] = `
Object {
  "createState": Object {},
  "currentlyEditing": "",
  "fetching": Object {},
  "getFromServer": [Function],
  "getState": Object {
    "users": Object {
      "u1": Object {
        "_id": "u1",
        "email": "u1",
      },
    },
  },
  "lastFetch": Object {},
  "removeState": Object {},
  "updateState": Object {},
}
`;

exports[`Preset Update works as planned: requests after Starting zoom in 1`] = `
Array [
  Object {
    "params": Object {
      "0": "/cgi-bin/aw_ptz",
    },
    "query": Object {
      "cmd": "#Z03",
      "res": "1",
    },
  },
]
`;

exports[`Preset Update works as planned: requests after Stop zoom 1`] = `
Array [
  Object {
    "params": Object {
      "0": "/cgi-bin/aw_ptz",
    },
    "query": Object {
      "cmd": "#Z03",
      "res": "1",
    },
  },
  Object {
    "params": Object {
      "0": "/cgi-bin/aw_ptz",
    },
    "query": Object {
      "cmd": "#Z73",
      "res": "1",
    },
  },
  Object {
    "params": Object {
      "0": "/cgi-bin/aw_ptz",
    },
    "query": Object {
      "cmd": "#Z50",
      "res": "1",
    },
  },
]
`;

exports[`Preset Update works as planned: requests after Updating preset 1`] = `
Array [
  Object {
    "params": Object {
      "0": "/cgi-bin/aw_ptz",
    },
    "query": Object {
      "cmd": "#Z03",
      "res": "1",
    },
  },
  Object {
    "params": Object {
      "0": "/cgi-bin/aw_ptz",
    },
    "query": Object {
      "cmd": "#Z73",
      "res": "1",
    },
  },
  Object {
    "params": Object {
      "0": "/cgi-bin/aw_ptz",
    },
    "query": Object {
      "cmd": "#Z50",
      "res": "1",
    },
  },
  Object {
    "params": Object {
      "0": "/cgi-bin/aw_ptz",
    },
    "query": Object {
      "cmd": "#M05",
      "res": "1",
    },
  },
]
`;

exports[`Preset Update works as planned: requests after going to preset 1`] = `
Array [
  Object {
    "params": Object {
      "0": "/cgi-bin/aw_ptz",
    },
    "query": Object {
      "cmd": "#Z03",
      "res": "1",
    },
  },
  Object {
    "params": Object {
      "0": "/cgi-bin/aw_ptz",
    },
    "query": Object {
      "cmd": "#Z73",
      "res": "1",
    },
  },
  Object {
    "params": Object {
      "0": "/cgi-bin/aw_ptz",
    },
    "query": Object {
      "cmd": "#Z50",
      "res": "1",
    },
  },
  Object {
    "params": Object {
      "0": "/cgi-bin/aw_ptz",
    },
    "query": Object {
      "cmd": "#M05",
      "res": "1",
    },
  },
  Object {
    "params": Object {
      "0": "/cgi-bin/aw_ptz",
    },
    "query": Object {
      "cmd": "#R09",
      "res": "1",
    },
  },
]
`;

exports[`Preset Update works as planned: requests after starting zoom out 1`] = `
Array [
  Object {
    "params": Object {
      "0": "/cgi-bin/aw_ptz",
    },
    "query": Object {
      "cmd": "#Z03",
      "res": "1",
    },
  },
  Object {
    "params": Object {
      "0": "/cgi-bin/aw_ptz",
    },
    "query": Object {
      "cmd": "#Z73",
      "res": "1",
    },
  },
]
`;

exports[`Preset Update works as planned: requests before anything 1`] = `Array []`;
